// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TaskBar /> > Snapshots > <Clock /> > should match snapshot 1`] = `
.c0 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c1 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c2 div:first-child {
  right: 0;
}

<div>
  <div
    class="c0"
    style="display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="c1 c2"
    >
      10:00
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot 1`] = `
.c0 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with active prop 1`] = `
.c0 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c3 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: #c3c7cb;
  width: auto;
  height: auto;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  outline: 1px dotted #000000;
  outline-offset: -4px;
  padding-top: 4px;
  padding-right: 2px;
  padding-bottom: 0;
  padding-left: 4px;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
  </button>
  <button
    class="c3 c4"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with icon prop 1`] = `
.c0 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with small prop 1`] = `
.c0 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c2 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <button
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot 1`] = `
.c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c1 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c4 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c5 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c3 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <button
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <img
          alt="Windows95 Logo"
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c4"
      display="flex"
    />
    <div
      class="c5"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c6 c7"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 1`] = `
.c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c1 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c4 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c5 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c3 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <button
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <img
          alt="Windows95 Logo"
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c4"
      display="flex"
    />
    <div
      class="c5"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c6 c7"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 2`] = `
.c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c7 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c8 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c1 {
  position: absolute;
  bottom: 28px;
  width: auto;
  height: auto;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c4 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: #c3c7cb;
  width: auto;
  height: auto;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 2px 6px;
  color: #000000;
}

.c3 img {
  margin-right: 10px;
}

.c3:hover {
  background-color: #000e7a;
  color: #ffffff;
}

.c3 ul {
  display: none;
  position: absolute;
  top: -2px;
  left: 97%;
  color: #000000;
  z-index: 2;
}

.c3 ul img {
  width: 18px;
  height: 20px;
  margin-right: 6px;
}

.c3 svg {
  fill: #ffffff;
}

.c2 {
  background-color: #c3c7cb;
  padding: 5px 20px 6px;
  border: none;
  margin: 0;
  padding: 2px;
  list-style: none;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: 200px;
}

.c9 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c10 div:first-child {
  right: 0;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  outline: 1px dotted #000000;
  outline-offset: -4px;
  padding-top: 4px;
  padding-right: 2px;
  padding-bottom: 0;
  padding-left: 4px;
}

.c6 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <div
      class="c1"
    >
      <ul
        class="c2"
        width="200"
      >
        <li
          class="c3"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
          Local Disk (C:)
        </li>
        <li
          class="c3"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
          Windows Explorer
        </li>
      </ul>
    </div>
    <button
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <img
          alt="Windows95 Logo"
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c7"
      display="flex"
    />
    <div
      class="c8"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c9 c10"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with one Modal 1`] = `
.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  color: #000000;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 0px #000000;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c8 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c9 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c12 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c16 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c13 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: #e6e6e6;
  width: auto;
  height: auto;
}

.c1 {
  color: #fefefe;
  width: auto;
  height: auto;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-weight: 600;
  font-size: 10px;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:first-child {
  margin-right: 0;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c2 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #000e7a;
}

.c2 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c17 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c18 div:first-child {
  right: 0;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c11 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

.c15 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  text-align: left;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 c2"
      color="headerText"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
      <div
        class="c3 draggable"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5 c6"
        >
          ?
        </li>
        <li
          class="c5 c6"
        >
          X
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c8"
    display="flex"
  >
    <button
      class="c9 c10"
    >
      <div
        class="c11"
      >
        <img
          alt="Windows95 Logo"
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c12"
      display="flex"
    >
      <button
        class="c13 c14"
      >
        <div
          class="c11"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
        </div>
        <span
          class="c15"
        >
          file.bat
        </span>
      </button>
    </div>
    <div
      class="c16"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c17 c18"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with two Modals 1`] = `
.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  color: #000000;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 0px #000000;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c1 {
  color: #c6c6c6;
  width: auto;
  height: auto;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c11 {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 28px;
  width: 100%;
  padding: 2px;
  z-index: 2;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c12 {
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: auto;
  height: auto;
  background-color: #c3c7cb;
}

.c15 {
  --x-shadow: none;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  width: 100%;
  padding-left: 0;
  margin-left: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  background-color: #c3c7cb;
}

.c19 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: transparent;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  width: auto;
  height: auto;
}

.c18 {
  --x-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
  background-color: #e6e6e6;
  width: auto;
  height: auto;
}

.c9 {
  color: #fefefe;
  width: auto;
  height: auto;
  background-color: #c3c7cb;
  --x-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  box-shadow: var(--x-ring-shadow,0 0 #0000),var(--x-shadow);
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-weight: 600;
  font-size: 10px;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:first-child {
  margin-right: 0;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c2 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #7f787f;
}

.c2 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c10 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: none;
  background: #000e7a;
}

.c10 img {
  width: 15px;
  height: 14px;
  margin-right: 4px;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c20 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c21 div:first-child {
  right: 0;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c14 img {
  margin-right: 4px;
  min-width: 20px;
  width: 20px;
  height: 20px;
}

.c17 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  text-align: left;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 c2"
      color="headerNotActiveText"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
      <div
        class="c3 draggable"
      >
        Windows Explorer
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5 c6"
        >
          ?
        </li>
        <li
          class="c5 c6"
        >
          X
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c8 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c9 c10"
      color="headerText"
    >
      <img
        height="32"
        src="test-file-stub"
        width="32"
      />
      <div
        class="c3 draggable"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5 c6"
        >
          ?
        </li>
        <li
          class="c5 c6"
        >
          X
        </li>
      </ul>
    </div>
    <div
      class="c7"
    />
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12 c13"
    >
      <div
        class="c14"
      >
        <img
          alt="Windows95 Logo"
          height="32"
          src="test-file-stub"
          width="32"
        />
      </div>
      Start
    </button>
    <div
      class="c15"
      display="flex"
    >
      <button
        class="c12 c16"
      >
        <div
          class="c14"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
        </div>
        <span
          class="c17"
        >
          Windows Explorer
        </span>
      </button>
      <button
        class="c18 c16"
      >
        <div
          class="c14"
        >
          <img
            height="32"
            src="test-file-stub"
            width="32"
          />
        </div>
        <span
          class="c17"
        >
          file.bat
        </span>
      </button>
    </div>
    <div
      class="c19"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c20 c21"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;
